# syx

./: COPYING  ChangeLog  Doxyfile  Makefile.am  Makefile.in  NEWS  README  README-BINARIES  SConstruct  TODO  aclocal.m4  configure  configure.ac  makefile.vc  syx.pc.in  syx.vcproj
doc/: Makefile.am  Makefile.in
doc/manpage/: syx.1
doc/manual/: blocks.texi  inheritance.texi  introsyx.texi  language.texi  syx.texi  version.texi
examples/: Makefile.in  SConscript
examples/basic/: Makefile.in  SConscript  helloworld.st
examples/console/: Makefile.in  SConscript  menu.st
examples/embedding/: Makefile.in  SConscript  add.c  average.c  average.st  do-me.st
examples/gtk/: Makefile.in  SConscript  helloworld.st
examples/web/: Makefile.in  SConscript  browser.c  browser.st  (+1 more)
msvc/: syx-config.h
plugins/: Makefile.in  SConscript
scripts/: announcer.py  excm.py  release.sh
share/: Makefile.in
src/: Makefile.in  SConscript  main.c
syx/: Makefile.am  Makefile.in  SConscript  syx-bytecode.c  syx-bytecode.h  syx-config.h.in  syx-enums.h  syx-error.c  syx-error.h  syx-init.c  syx-init.h  syx-interp.c  syx-interp.h  syx-lexer.c  syx-lexer.h  syx-memory.c  syx-memory.h  syx-object.c  syx-object.h  syx-parser.h  syx-platform.h  syx-plugins.c  syx-plugins.h  syx-primitives.c  syx-profile.c  syx-profile.h  syx-scheduler-posix.c  syx-scheduler-win.c  syx-scheduler.c  syx-scheduler.h  syx-signal.c  syx-signal.h  syx-types.h  syx-utils.c  syx-utils.h  syx.h
tests/: Makefile.in  SConscript  testcoldparser.c  testinstances.c  testinterp.c  testscheduler.c
(+101 files in other folders)
